[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/Loons_boss/loon_rotate.png" type="Texture" id=1]
[ext_resource path="res://Stage_1-1.gd" type="Script" id=2]
[ext_resource path="res://resources/Loons_boss/laser_beam_warning.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/Loons_boss/end_stage_0.mp3" type="AudioStream" id=4]
[ext_resource path="res://resources/Loons_boss/laser_beam_attack.wav" type="AudioStream" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 150, 90 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "entry"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 355, 98 ), Vector2( 150, 97 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_attack"
} ]
}

[node name="Stage_1-1" type="Area2D" groups=["boss_area"]]
position = Vector2( 150, 90 )
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="shield_sprite" type="Sprite" parent="."]
scale = Vector2( 0.115159, 0.115159 )
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -22.2222, 3.33333, -17.7778, 5.55556, -12.2222, 5.55556, -6.66667, 4.44444, -4.44444, 11.1111, 0, 15.5556, 6.66667, 18.8889, 14.4444, 20, 6.66667, 24.4444, -6.66667, 28.8889, -13.3333, 30, -23.3333, 28.8889, -27.7778, 25.5556, -28.8889, 20, -28.8889, 15.5556, -26.6667, 10 )

[node name="Shield" type="Area2D" parent="." groups=["boss_area"]]

[node name="shield_collision" type="CollisionPolygon2D" parent="Shield"]
polygon = PoolVector2Array( -37.7778, -10, -26.6667, -18.8889, -24.4444, -20, -24.4444, -23.3333, -21.1111, -27.7778, -15.5556, -32.2222, -11.1111, -33.3333, -5.55556, -32.2222, -2.22222, -27.7778, -1.11111, -25.5556, -1.11111, -17.7778, -3.33333, -11.1111, -4.44444, -5.55556, 1.11111, -7.77778, 12.2222, -11.1111, 25.5556, -12.2222, 36.6667, -11.1111, 35.5556, -7.77778, 33.3333, -1.11111, 30, 5.55556, 24.4444, 12.2222, 15.5556, 18.8889, 14.4444, 20, 8.88889, 18.8889, 2.22222, 16.6667, -3.33333, 12.2222, -6.66667, 4.44444, -13.3333, 5.55556, -16.6667, 5.55556, -21.1111, 3.33333, -22.2222, 2.22222, -21.1111, 1.11111, -16.6667, -3.33333, -14.4444, -7.77778, -13.3333, -10, -14.4444, -14.4444, -16.6667, -15.5556, -30, -11.1111, -37.7778, -8.88889, -38.8889, -8.88889 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "entry"
anims/RESET = SubResource( 2 )
anims/entry = SubResource( 1 )

[node name="Warning_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -11.0

[node name="prepare_timer" type="Timer" parent="."]
one_shot = true

[node name="change_rotation" type="Timer" parent="."]
one_shot = true

[node name="rage_mode_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="Attack_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.991

[node name="sound_loop" type="Timer" parent="."]
one_shot = true

[node name="Timer_for_gael" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="stop_rage_mode_sound" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Stage_11_body_entered"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
[connection signal="timeout" from="prepare_timer" to="." method="_on_prepare_timer_timeout"]
[connection signal="timeout" from="change_rotation" to="." method="_on_change_rotation_timeout"]
[connection signal="timeout" from="sound_loop" to="." method="_on_sound_loop_timeout"]
[connection signal="timeout" from="Timer_for_gael" to="." method="_on_Timer_for_gael_timeout"]
[connection signal="timeout" from="stop_rage_mode_sound" to="." method="_on_stop_rage_mode_sound_timeout"]
